<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="light"
            type="fr.mjoudar.lackey.domain.models.Light" />
        <variable
            name="viewModel"
            type="fr.mjoudar.lackey.presentation.deviceSteering.DeviceSteeringViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/view_light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/warm_blue"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="48dp"
            app:cardCornerRadius="18dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bg_faint"
                android:scaleType="centerCrop" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/device_img_light"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/light"
                    android:src="@drawable/light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/device_name_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/device_img_light"
                    android:gravity="center"
                    tools:text="Device"
                    android:text="@{light.deviceName}"
                    style="@style/device_steering_name" />

                <TextView
                    android:id="@+id/mode_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/specs_light"
                    app:layout_constraintTop_toBottomOf="@id/device_name_light"
                    app:layout_constraintBottom_toTopOf="@id/progress_bar_light"
                    tools:text="ON"
                    android:text="@{light.mode.name}"
                    android:onClick="@{() -> viewModel.modeLightListener()}"
                    android:layout_margin="12dp"
                    android:padding="10dp"
                    android:background="@drawable/border_radius_white"
                    style="@style/device_steering_specs" />

                <com.rtugeek.android.colorseekbar.ColorSeekBar
                    android:id="@+id/progress_bar_light"
                    android:layout_width="wrap_content"
                    android:layout_height="260dp"
                    app:colorSeekBarMaxProgress="100"
                    android:rotation="180"
                    android:progress="@{light.intensity}"
                    app:colorSeekBarColorSeeds="@array/custom_color"
                    app:colorSeekBarVertical="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mode_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.626" />

                <TextView
                    android:id="@+id/specs_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/mode_light"
                    app:layout_constraintTop_toBottomOf="@id/device_name_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/progress_bar_light"
                    tools:text="60%"
                    intensity="@{light.intensity}"
                    style="@style/device_steering_level" />

                <Button
                    android:id="@+id/button_decr_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="- 10%"
                    android:onClick="@{() -> viewModel.buttonDecrLightListener()}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mode_light"
                    app:layout_constraintEnd_toStartOf="@id/progress_bar_light"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <Button
                    android:id="@+id/button_incr_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+ 10%"
                    android:onClick="@{() -> viewModel.buttonIncrLightListener()}"
                    app:layout_constraintStart_toEndOf="@id/progress_bar_light"
                    app:layout_constraintTop_toBottomOf="@id/mode_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>



    </FrameLayout>

</layout>